src/parser/assembly/AssemblyParser.java
// Generated from /home/luca/IdeaProjects/SimpLanPlus-Interpreter/src/parser/assembly/Assembly.g4 by ANTLR 4.9.3
package parser.assembly;

import java.util.HashMap;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AssemblyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, PUSH=3, POP=4, TOP=5, LI=6, MOV=7, LW=8, SW=9, LB=10, 
		SB=11, ADD=12, ADDI=13, SUB=14, SUBI=15, MULT=16, MULTI=17, DIV=18, DIVI=19, 
		LT=20, LTE=21, GT=22, GTE=23, EQ=24, NEQ=25, AND=26, OR=27, NOT=28, NEG=29, 
		PRINT=30, BEQ=31, LABEL_IST=32, HALT=33, JAL=34, JR=35, SYMBOLS=36, LABEL=37, 
		REG=38, STRING=39, COL=40, NUMBER=41, WHITESP=42, LINECOMMENTS=43;
	public static final int
		RULE_program = 0, RULE_instruction = 1, RULE_push = 2, RULE_pop = 3, RULE_top = 4, 
		RULE_li = 5, RULE_mov = 6, RULE_lw = 7, RULE_sw = 8, RULE_lb = 9, RULE_sb = 10, 
		RULE_add = 11, RULE_addi = 12, RULE_sub = 13, RULE_subi = 14, RULE_mult = 15, 
		RULE_multi = 16, RULE_div = 17, RULE_divi = 18, RULE_lt = 19, RULE_lte = 20, 
		RULE_gt = 21, RULE_gte = 22, RULE_eq = 23, RULE_neq = 24, RULE_and = 25, 
		RULE_or = 26, RULE_not = 27, RULE_neg = 28, RULE_print = 29, RULE_beq = 30, 
		RULE_label = 31, RULE_halt = 32, RULE_jal = 33, RULE_jr = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "instruction", "push", "pop", "top", "li", "mov", "lw", "sw", 
			"lb", "sb", "add", "addi", "sub", "subi", "mult", "multi", "div", "divi", 
			"lt", "lte", "gt", "gte", "eq", "neq", "and", "or", "not", "neg", "print", 
			"beq", "label", "halt", "jal", "jr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'push'", "'pop'", "'top'", "'li'", "'mov'", "'lw'", 
			"'sw'", "'lb'", "'sb'", "'add'", "'addi'", "'sub'", "'subi'", "'mult'", 
			"'multi'", "'div'", "'divi'", "'lt'", "'lte'", "'gt'", "'gte'", "'eq'", 
			"'neq'", "'and'", "'or'", "'not'", "'neg'", "'print'", "'beq'", "'label'", 
			"'halt'", "'jal'", "'jr'", "'_'", null, null, null, "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "PUSH", "POP", "TOP", "LI", "MOV", "LW", "SW", "LB", 
			"SB", "ADD", "ADDI", "SUB", "SUBI", "MULT", "MULTI", "DIV", "DIVI", "LT", 
			"LTE", "GT", "GTE", "EQ", "NEQ", "AND", "OR", "NOT", "NEG", "PRINT", 
			"BEQ", "LABEL_IST", "HALT", "JAL", "JR", "SYMBOLS", "LABEL", "REG", "STRING", 
			"COL", "NUMBER", "WHITESP", "LINECOMMENTS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Assembly.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AssemblyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblyListener ) ((AssemblyListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblyListener ) ((AssemblyListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AssemblyVisitor ) return ((AssemblyVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PUSH) | (1L << POP) | (1L << TOP) | (1L << LI) | (1L << MOV) | (1L << LW) | (1L << SW) | (1L << LB) | (1L << SB) | (1L << ADD) | (1L << ADDI) | (1L << SUB) | (1L << SUBI) | (1L << MULT) | (1L << MULTI) | (1L << DIV) | (1L << DIVI) | (1L << LT) | (1L << LTE) | (1L << GT) | (1L << GTE) | (1L << EQ) | (1L << NEQ) | (1L << AND) | (1L << OR) | (1L << NOT) | (1L << NEG) | (1L << PRINT) | (1L << BEQ) | (1L << LABEL_IST) | (1L << HALT) | (1L << JAL) | (1L << JR))) != 0)) {
				{
				{
				setState(70);
				instruction();
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public LabelContext label() {
			return getRuleContext(LabelContext.class,0);
		}
		public PushContext push() {
			return getRuleContext(PushContext.class,0);
		}
		public PopContext pop() {
			return getRuleContext(PopContext.class,0);
		}
		public TopContext top() {
			return getRuleContext(TopContext.class,0);
		}
		public LiContext li() {
			return getRuleContext(LiContext.class,0);
		}
		public MovContext mov() {
			return getRuleContext(MovContext.class,0);
		}
		public LwContext lw() {
			return getRuleContext(LwContext.class,0);
		}
		public SwContext sw() {
			return getRuleContext(SwContext.class,0);
		}
		public LbContext lb() {
			return getRuleContext(LbContext.class,0);
		}
		public SbContext sb() {
			return getRuleContext(SbContext.class,0);
		}
		public AddContext add() {
			return getRuleContext(AddContext.class,0);
		}
		public AddiContext addi() {
			return getRuleContext(AddiContext.class,0);
		}
		public SubContext sub() {
			return getRuleContext(SubContext.class,0);
		}
		public SubiContext subi() {
			return getRuleContext(SubiContext.class,0);
		}
		public MultContext mult() {
			return getRuleContext(MultContext.class,0);
		}
		public MultiContext multi() {
			return getRuleContext(MultiContext.class,0);
		}
		public DivContext div() {
			return getRuleContext(DivContext.class,0);
		}
		public DiviContext divi() {
			return getRuleContext(DiviContext.class,0);
		}
		public LtContext lt() {
			return getRuleContext(LtContext.class,0);
		}
		public LteContext lte() {
			return getRuleContext(LteContext.class,0);
		}
		public GtContext gt() {
			return getRuleContext(GtContext.class,0);
		}
		public GteContext gte() {
			return getRuleContext(GteContext.class,0);
		}
		public EqContext eq() {
			return getRuleContext(EqContext.class,0);
		}
		public NeqContext neq() {
			return getRuleContext(NeqContext.class,0);
		}
		public AndContext and() {
			return getRuleContext(AndContext.class,0);
		}
		public OrContext or() {
			return getRuleContext(OrContext.class,0);
		}
		public NotContext not() {
			return getRuleContext(NotContext.class,0);
		}
		public NegContext neg() {
			return getRuleContext(NegContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public JalContext jal() {
			return getRuleContext(JalContext.class,0);
		}
		public JrContext jr() {
			return getRuleContext(JrContext.class,0);
		}
		public BeqContext beq() {
			return getRuleContext(BeqContext.class,0);
		}
		public HaltContext halt() {
			return getRuleContext(HaltContext.class,0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblyListener ) ((AssemblyListener)listener).enterInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblyListener ) ((AssemblyListener)listener).exitInstruction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AssemblyVisitor ) return ((AssemblyVisitor<? extends T>)visitor).visitInstruction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instruction);
		try {
			setState(109);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LABEL_IST:
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				label();
				}
				break;
			case PUSH:
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				push();
				}
				break;
			case POP:
				enterOuterAlt(_localctx, 3);
				{
				setState(78);
				pop();
				}
				break;
			case TOP:
				enterOuterAlt(_localctx, 4);
				{
				setState(79);
				top();
				}
				break;
			case LI:
				enterOuterAlt(_localctx, 5);
				{
				setState(80);
				li();
				}
				break;
			case MOV:
				enterOuterAlt(_localctx, 6);
				{
				setState(81);
				mov();
				}
				break;
			case LW:
				enterOuterAlt(_localctx, 7);
				{
				setState(82);
				lw();
				}
				break;
			case SW:
				enterOuterAlt(_localctx, 8);
				{
				setState(83);
				sw();
				}
				break;
			case LB:
				enterOuterAlt(_localctx, 9);
				{
				setState(84);
				lb();
				}
				break;
			case SB:
				enterOuterAlt(_localctx, 10);
				{
				setState(85);
				sb();
				}
				break;
			case ADD:
				enterOuterAlt(_localctx, 11);
				{
				setState(86);
				add();
				}
				break;
			case ADDI:
				enterOuterAlt(_localctx, 12);
				{
				setState(87);
				addi();
				}
				break;
			case SUB:
				enterOuterAlt(_localctx, 13);
				{
				setState(88);
				sub();
				}
				break;
			case SUBI:
				enterOuterAlt(_localctx, 14);
				{
				setState(89);
				subi();
				}
				break;
			case MULT:
				enterOuterAlt(_localctx, 15);
				{
				setState(90);
				mult();
				}
				break;
			case MULTI:
				enterOuterAlt(_localctx, 16);
				{
				setState(91);
				multi();
				}
				break;
			case DIV:
				enterOuterAlt(_localctx, 17);
				{
				setState(92);
				div();
				}
				break;
			case DIVI:
				enterOuterAlt(_localctx, 18);
				{
				setState(93);
				divi();
				}
				break;
			case LT:
				enterOuterAlt(_localctx, 19);
				{
				setState(94);
				lt();
				}
				break;
			case LTE:
				enterOuterAlt(_localctx, 20);
				{
				setState(95);
				lte();
				}
				break;
			case GT:
				enterOuterAlt(_localctx, 21);
				{
				setState(96);
				gt();
				}
				break;
			case GTE:
				enterOuterAlt(_localctx, 22);
				{
				setState(97);
				gte();
				}
				break;
			case EQ:
				enterOuterAlt(_localctx, 23);
				{
				setState(98);
				eq();
				}
				break;
			case NEQ:
				enterOuterAlt(_localctx, 24);
				{
				setState(99);
				neq();
				}
				break;
			case AND:
				enterOuterAlt(_localctx, 25);
				{
				setState(100);
				and();
				}
				break;
			case OR:
				enterOuterAlt(_localctx, 26);
				{
				setState(101);
				or();
				}
				break;
			case NOT:
				enterOuterAlt(_localctx, 27);
				{
				setState(102);
				not();
				}
				break;
			case NEG:
				enterOuterAlt(_localctx, 28);
				{
				setState(103);
				neg();
				}
				break;
			case PRINT:
				enterOuterAlt(_localctx, 29);
				{
				setState(104);
				print();
				}
				break;
			case JAL:
				enterOuterAlt(_localctx, 30);
				{
				setState(105);
				jal();
				}
				break;
			case JR:
				enterOuterAlt(_localctx, 31);
				{
				setState(106);
				jr();
				}
				break;
			case BEQ:
				enterOuterAlt(_localctx, 32);
				{
				setState(107);
				beq();
				}
				break;
			case HALT:
				enterOuterAlt(_localctx, 33);
				{
				setState(108);
				halt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PushContext extends ParserRuleContext {
		public Token src;
		public TerminalNode PUSH() { return getToken(AssemblyParser.PUSH, 0); }
		public TerminalNode REG() { return getToken(AssemblyParser.REG, 0); }
		public PushContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_push; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblyListener ) ((AssemblyListener)listener).enterPush(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblyListener ) ((AssemblyListener)listener).exitPush(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AssemblyVisitor ) return ((AssemblyVisitor<? extends T>)visitor).visitPush(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PushContext push() throws RecognitionException {
		PushContext _localctx = new PushContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_push);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(PUSH);
			setState(112);
			((PushContext)_localctx).src = match(REG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PopContext extends ParserRuleContext {
		public Token dest;
		public TerminalNode POP() { return getToken(AssemblyParser.POP, 0); }
		public TerminalNode REG() { return getToken(AssemblyParser.REG, 0); }
		public PopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblyListener ) ((AssemblyListener)listener).enterPop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblyListener ) ((AssemblyListener)listener).exitPop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AssemblyVisitor ) return ((AssemblyVisitor<? extends T>)visitor).visitPop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PopContext pop() throws RecognitionException {
		PopContext _localctx = new PopContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_pop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(POP);
			setState(115);
			((PopContext)_localctx).dest = match(REG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TopContext extends ParserRuleContext {
		public Token dest;
		public TerminalNode TOP() { return getToken(AssemblyParser.TOP, 0); }
		public TerminalNode REG() { return getToken(AssemblyParser.REG, 0); }
		public TopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_top; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblyListener ) ((AssemblyListener)listener).enterTop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblyListener ) ((AssemblyListener)listener).exitTop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AssemblyVisitor ) return ((AssemblyVisitor<? extends T>)visitor).visitTop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TopContext top() throws RecognitionException {
		TopContext _localctx = new TopContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_top);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(TOP);
			setState(118);
			((TopContext)_localctx).dest = match(REG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LiContext extends ParserRuleContext {
		public Token dest;
		public Token n;
		public TerminalNode LI() { return getToken(AssemblyParser.LI, 0); }
		public TerminalNode REG() { return getToken(AssemblyParser.REG, 0); }
		public TerminalNode NUMBER() { return getToken(AssemblyParser.NUMBER, 0); }
		public LiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_li; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblyListener ) ((AssemblyListener)listener).enterLi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblyListener ) ((AssemblyListener)listener).exitLi(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AssemblyVisitor ) return ((AssemblyVisitor<? extends T>)visitor).visitLi(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LiContext li() throws RecognitionException {
		LiContext _localctx = new LiContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_li);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(LI);
			setState(121);
			((LiContext)_localctx).dest = match(REG);
			setState(122);
			((LiContext)_localctx).n = match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MovContext extends ParserRuleContext {
		public Token dest;
		public Token src;
		public TerminalNode MOV() { return getToken(AssemblyParser.MOV, 0); }
		public List<TerminalNode> REG() { return getTokens(AssemblyParser.REG); }
		public TerminalNode REG(int i) {
			return getToken(AssemblyParser.REG, i);
		}
		public MovContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mov; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblyListener ) ((AssemblyListener)listener).enterMov(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblyListener ) ((AssemblyListener)listener).exitMov(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AssemblyVisitor ) return ((AssemblyVisitor<? extends T>)visitor).visitMov(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MovContext mov() throws RecognitionException {
		MovContext _localctx = new MovContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_mov);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(MOV);
			setState(125);
			((MovContext)_localctx).dest = match(REG);
			setState(126);
			((MovContext)_localctx).src = match(REG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LwContext extends ParserRuleContext {
		public Token reg1;
		public Token offset;
		public Token reg2;
		public TerminalNode LW() { return getToken(AssemblyParser.LW, 0); }
		public List<TerminalNode> REG() { return getTokens(AssemblyParser.REG); }
		public TerminalNode REG(int i) {
			return getToken(AssemblyParser.REG, i);
		}
		public TerminalNode NUMBER() { return getToken(AssemblyParser.NUMBER, 0); }
		public LwContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lw; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblyListener ) ((AssemblyListener)listener).enterLw(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblyListener ) ((AssemblyListener)listener).exitLw(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AssemblyVisitor ) return ((AssemblyVisitor<? extends T>)visitor).visitLw(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LwContext lw() throws RecognitionException {
		LwContext _localctx = new LwContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_lw);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(LW);
			setState(129);
			((LwContext)_localctx).reg1 = match(REG);
			setState(130);
			((LwContext)_localctx).offset = match(NUMBER);
			setState(131);
			match(T__0);
			setState(132);
			((LwContext)_localctx).reg2 = match(REG);
			setState(133);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SwContext extends ParserRuleContext {
		public Token reg1;
		public Token offset;
		public Token reg2;
		public TerminalNode SW() { return getToken(AssemblyParser.SW, 0); }
		public List<TerminalNode> REG() { return getTokens(AssemblyParser.REG); }
		public TerminalNode REG(int i) {
			return getToken(AssemblyParser.REG, i);
		}
		public TerminalNode NUMBER() { return getToken(AssemblyParser.NUMBER, 0); }
		public SwContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sw; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblyListener ) ((AssemblyListener)listener).enterSw(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblyListener ) ((AssemblyListener)listener).exitSw(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AssemblyVisitor ) return ((AssemblyVisitor<? extends T>)visitor).visitSw(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SwContext sw() throws RecognitionException {
		SwContext _localctx = new SwContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_sw);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(SW);
			setState(136);
			((SwContext)_localctx).reg1 = match(REG);
			setState(137);
			((SwContext)_localctx).offset = match(NUMBER);
			setState(138);
			match(T__0);
			setState(139);
			((SwContext)_localctx).reg2 = match(REG);
			setState(140);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LbContext extends ParserRuleContext {
		public Token reg1;
		public Token offset;
		public Token reg2;
		public TerminalNode LB() { return getToken(AssemblyParser.LB, 0); }
		public List<TerminalNode> REG() { return getTokens(AssemblyParser.REG); }
		public TerminalNode REG(int i) {
			return getToken(AssemblyParser.REG, i);
		}
		public TerminalNode NUMBER() { return getToken(AssemblyParser.NUMBER, 0); }
		public LbContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lb; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblyListener ) ((AssemblyListener)listener).enterLb(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblyListener ) ((AssemblyListener)listener).exitLb(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AssemblyVisitor ) return ((AssemblyVisitor<? extends T>)visitor).visitLb(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LbContext lb() throws RecognitionException {
		LbContext _localctx = new LbContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_lb);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(LB);
			setState(143);
			((LbContext)_localctx).reg1 = match(REG);
			setState(144);
			((LbContext)_localctx).offset = match(NUMBER);
			setState(145);
			match(T__0);
			setState(146);
			((LbContext)_localctx).reg2 = match(REG);
			setState(147);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SbContext extends ParserRuleContext {
		public Token reg1;
		public Token offset;
		public Token reg2;
		public TerminalNode SB() { return getToken(AssemblyParser.SB, 0); }
		public List<TerminalNode> REG() { return getTokens(AssemblyParser.REG); }
		public TerminalNode REG(int i) {
			return getToken(AssemblyParser.REG, i);
		}
		public TerminalNode NUMBER() { return getToken(AssemblyParser.NUMBER, 0); }
		public SbContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sb; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblyListener ) ((AssemblyListener)listener).enterSb(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblyListener ) ((AssemblyListener)listener).exitSb(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AssemblyVisitor ) return ((AssemblyVisitor<? extends T>)visitor).visitSb(this);
			else return visitor.visitChildren(this);
		}
	}
